# audiovisualizer

./: .gitignore  MANIFEST.in  README.md  issues.txt  pyproject.toml  setup.py
.scratch/: issues.txt
audiovisualizer/: core.py  elements.py
docs/: README_visualizers.md  testing_strategy.md
examples/: advanced_effects.py  basic_overlay.py  compare_implementations.py  enhanced_federation_demo.py  federation_records_demo.py  filter_graph_demo.py  flexible_reactivity_demo.py  optimized_performance_demo.py  overlay_demo.py
personas/: vis_coder.md
src/audiovisualizer/: __init__.py  audio_analysis.py  core.py  effects.py  elements.py  export.py  ffmpeg_effect_mapper.py  ffmpeg_utils.py  visualizer.py
src/audiovisualizer/effects/: __init__.py  base.py  logo.py  registry.py  spectrum.py  text.py
src/audiovisualizer/ffmpeg_filter_graph/: __init__.py  builders.py  converters.py  core.py  registry.py  validators.py  visualizers.py
src/audiovisualizer/src/: __init__.py  audio_features.py
tests/: conftest.py  test_core.py  test_ffmpeg_utils.py  test_visualizer.py
tests/ffmpeg_filter_graph/: __init__.py  test_core.py  test_filter_graph.py  test_filter_node.py  test_visualizers.py
tests/integration/: test_end_to_end.py
