[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiovisualizer"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A package for creating reactive audio-visual overlays for videos"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pillow",
    "moviepy",
    "librosa",
    "psutil"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/audiovisualizer"
"Bug Tracker" = "https://github.com/yourusername/audiovisualizer/issues"